--- a/README
+++ b/README
@@ -7,7 +7,10 @@ Sending SMS
 var Szc = require('szc')
 var SMS = new Szc.SMS({serviceId: 42, pass: 'thanksforallthefish'})
 
-var params = {clientId: '79012345678', text: 'How many roads must a man walk down?'}
+var params = {
+    clientId: '79012345678',
+    text: 'How many roads must a man walk down?'
+}
 
 SMS.send(params).then(function(msgId) {
     // Success!
