--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Svyaznoy-Zagruzka services client.
-==================================
+Trying to try to try to implement Svyaznoy-Zagruzka services client.
+Docs: http://docs.zagruzka.com
 
 Sending SMS
 -----------
